--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.talat.soundtone.MainActivity">
+    tools:context="com.talat.soundtone.HelpActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,17 +21,14 @@
 
     </android.support.design.widget.AppBarLayout>
 
+    <include layout="@layout/content_help" />
+
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/ad_to_playlist_fab"
+        android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:onClick="onAddToPlayLIstFabClick"
-        app:backgroundTint="@color/colorAlbumBack"
-        app:srcCompat="@drawable/ic_library_add_black_24dp" />
-
-    <include layout="@layout/content_main" />
-
+        app:srcCompat="@android:drawable/ic_dialog_email" />
 
 </android.support.design.widget.CoordinatorLayout>
