--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -7,13 +7,21 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.talat.soundtone.MainActivity"
+    android:background="#B0BEC5"
     tools:showIn="@layout/app_bar_main">
 
     <ListView
         android:id="@+id/list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="6dp"
         android:clickable="true"
         android:focusable="true"
+        android:cacheColorHint="@android:color/transparent"
+        android:fastScrollEnabled="true"
+        android:scrollbarStyle="insideInset"
+        android:scrollingCache="false"
+        android:scrollbarSize="20dip"
         android:longClickable="true"/>
+
 </RelativeLayout>
