--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -32,7 +32,7 @@
     <item
         android:id="@+id/help_button"
         android:orderInCategory="101"
-        android:title="@string/help"
+        android:title="@string/about"
         app:showAsAction="never"/>
 
     <item android:id="@+id/search"
